tests/baselines/reference/recursiveGenericUnionType2.errors.txt
recursiveGenericUnionType2.ts(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
recursiveGenericUnionType2.ts(8,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== recursiveGenericUnionType2.ts (2 errors) ====
    declare module Test1 {
                   ~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export type Container<T> = T | {
            [i: string]: Container<T>[];
        };
        export type IStringContainer = Container<string>;
    }
    
    declare module Test2 {
                   ~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export type Container<T> = T | {
            [i: string]: Container<T>[];
        };
        export type IStringContainer = Container<string>;
    }
    
    var x: Test1.Container<number>;
    
    var s1: Test1.IStringContainer;
    var s2: Test2.IStringContainer;
    s1 = s2;
    s2 = s1;
    